--- a/Flame/ca.lproj/Options.strings
+++ b/Flame/ca.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Afegir en grup";
 "BATCH_ADD_FOOTER" = "Afegir més d'un repositori a la vegada tenint-los al porta-retalls.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Personalitzar interfície";
 "GLOBAL_TINT" = "Tint global";
 "GLOBAL_TINT_COLOR" = "Color de tint:";
