--- a/Flame/de.lproj/Options.strings
+++ b/Flame/de.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Mehrfaches Hinzufügen";
 "BATCH_ADD_FOOTER" = "Erlaubt das Hinzufügen von mehreren Quellen auf einmal, wenn sich diese in der Zwischenablage befinden.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "UI anpassen";
 "GLOBAL_TINT" = "Globaler Tint";
 "GLOBAL_TINT_COLOR" = "Tint-Farbe:";
