--- a/Flame/en-AU.lproj/Options.strings
+++ b/Flame/en-AU.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Batch Add";
 "BATCH_ADD_FOOTER" = "Add multiple repos at once by having them in your clipboard.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Customize UI";
 "GLOBAL_TINT" = "Global Tint";
 "GLOBAL_TINT_COLOR" = "Global Tint Color:";
