--- a/Flame/es.lproj/Options.strings
+++ b/Flame/es.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Añadir múltiples";
 "BATCH_ADD_FOOTER" = "Añadir más de un repositorio a la vez teniéndolos el portapapeles.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Personalizar interfície";
 "GLOBAL_TINT" = "Tinto global";
 "GLOBAL_TINT_COLOR" = "Color de tinto global:";
