--- a/Flame/fi.lproj/Options.strings
+++ b/Flame/fi.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Yhtäaikainen lisäys";
 "BATCH_ADD_FOOTER" = "Lisää useita repoja yhtä aikaa kopioimalla ja liittämällä.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Mukauta käyttöliittymää";
 "GLOBAL_TINT" = "Yleinen väri";
 "GLOBAL_TINT_COLOR" = "Valitse yleinen väri:";
