--- a/Flame/fr.lproj/Options.strings
+++ b/Flame/fr.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Ajouter par lot";
 "BATCH_ADD_FOOTER" = "Ajouter plusieurs repos à la fois.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Personnaliser UI";
 "GLOBAL_TINT" = "Teinte Universelle";
 "GLOBAL_TINT_COLOR" = "Couleur de teinte:";
