--- a/Flame/he.lproj/Options.strings
+++ b/Flame/he.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "הוספה מרובה";
 "BATCH_ADD_FOOTER" = "מוסיף מספר מקורות בבת אחת בכך שהם מועתקים מראש.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "התאם אישית ממשק";
 "GLOBAL_TINT" = "גוון גלובלי";
 "GLOBAL_TINT_COLOR" = "צבע גוון גלובל:";
