--- a/Flame/id.lproj/Options.strings
+++ b/Flame/id.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Tambah bertumpuk";
 "BATCH_ADD_FOOTER" = "Tambahkan banyak repo secara langsung dengan meletakkannya di clipboard";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Sesuaikan Antarmuka";
 "GLOBAL_TINT" = "Warna Keseluruhan";
 "GLOBAL_TINT_COLOR" = "Warna Keseluruhan:";
