--- a/Flame/it.lproj/Options.strings
+++ b/Flame/it.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Aggiunta Di Gruppo";
 "BATCH_ADD_FOOTER" = "Aggiunge più sorgenti contemporaneamente in base a quelle copiate nei tuoi appunti.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Personalizza Interfaccia";
 "GLOBAL_TINT" = "Tinta Globale";
 "GLOBAL_TINT_COLOR" = "Colore Tinta Globale:";
