--- a/Flame/ms.lproj/Options.strings
+++ b/Flame/ms.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Tambah Kelompok";
 "BATCH_ADD_FOOTER" = "Tambah beberapa repo dalam masa sekali dengan apa yang ada didalam clipboard.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Ubah suai UI";
 "GLOBAL_TINT" = "Semua Tint";
 "GLOBAL_TINT_COLOR" = "Semua Warna Tint:";
