--- a/Flame/nl.lproj/Options.strings
+++ b/Flame/nl.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Meerdere toevoegen";
 "BATCH_ADD_FOOTER" = "Voeg meerdere repositories tegelijk toe door ze op het klembord the hebben.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "UI aanpassen";
 "GLOBAL_TINT" = "Globale tint";
 "GLOBAL_TINT_COLOR" = "Kleur van de globale tint:";
