--- a/Flame/tr.lproj/Options.strings
+++ b/Flame/tr.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "Toplu Ekleme";
 "BATCH_ADD_FOOTER" = "Birden fazla kopyalanmış kaynakların hepsini aynı anda ekler.";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "Özelleştirilmiş Arayüz";
 "GLOBAL_TINT" = "Tüm Renkler";
 "GLOBAL_TINT_COLOR" = "Tüm Renklerin Rengi:";
