--- a/Flame/zh-Hant.lproj/Options.strings
+++ b/Flame/zh-Hant.lproj/Options.strings
@@ -21,6 +21,9 @@
 "BATCH_ADD" = "批次新增來源";
 "BATCH_ADD_FOOTER" = "一次新增多個在剪貼簿的來源。";
 
+"EXPORT" = "Export";
+"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+
 "CUSTOMIZE_UI_HEADER" = "介面設定";
 "GLOBAL_TINT" = "整體渲染";
 "GLOBAL_TINT_COLOR" = "整體渲染顏色：";
