--- a/Flame/de.lproj/Options.strings
+++ b/Flame/de.lproj/Options.strings
@@ -22,7 +22,7 @@
 "BATCH_ADD_FOOTER" = "Erlaubt das Hinzufügen von mehreren Quellen auf einmal, wenn sich diese in der Zwischenablage befinden.";
 
 "EXPORT" = "Export";
-"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+"EXPORT_FOOTER" = "Ermöglicht den Export einer Liste aller installierten Tweaks und Quellen im \"Installiert\"-Tab.";
 
 "CUSTOMIZE_UI_HEADER" = "UI anpassen";
 "GLOBAL_TINT" = "Globaler Tint";
