--- a/Flame/it.lproj/Options.strings
+++ b/Flame/it.lproj/Options.strings
@@ -11,8 +11,8 @@
 "SEARCH" = "Cerca";
 "DEFAULT_PAGE_FOOTER" = "Imposta la pagina da visualizzare all'avvio di Cydia.";
 
-"REFRESH_HEADER" = "Refresh Settings";
-"PULL_TO_REFRESH" = "Pull to Refresh";
+"REFRESH_HEADER" = "Impostazioni Aggiornamento";
+"PULL_TO_REFRESH" = "Tira per aggiornare";
 "AUTO_REFRESH" = "Disattiva Aggiornamento Automatico";
 "TIMEOUT" = "Timeout";
 "SECONDS" = "Secondi:";
@@ -22,7 +22,7 @@
 "BATCH_ADD_FOOTER" = "Aggiunge più sorgenti contemporaneamente in base a quelle copiate nei tuoi appunti.";
 
 "EXPORT" = "Export";
-"EXPORT_FOOTER" = "Adds ability to export a list of installed tweaks and sources from the Installed tab.";
+"EXPORT_FOOTER" = "Aggiunge una funziona che esporta una lista di tweak e sorgenti installate nella scheda Installato.";
 
 "CUSTOMIZE_UI_HEADER" = "Personalizza Interfaccia";
 "GLOBAL_TINT" = "Tinta Globale";
